turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:1: error: not found: value setCouleurSol
  setCouleurSol(couleur) = {
  ^LangtonsAnt:1: error: not found: value couleur
  setCouleurSol(couleur) = {
                ^LangtonsAnt:2: error: not found: value couleur
    setCouleurBrosse(couleur)
                     ^LangtonsAnt:3: error: not found: value baisseBosse
    baisseBosse()
    ^LangtonsAnt:7: error: not found: value setCouleurSol
  setCouleurSol(Color.Black)
  ^LangtonsAnt:7: error: value Black is not a member of object java.awt.Color
  setCouleurSol(Color.Black)
                      ^