turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  setCouleurSol(couleur) = {
    setCouleurBrosse(couleur)
    baisseBosse()
    leveBrosse()
  }
  
  setCouleurSol(Color.Black)
}